--- a/assets/styles.css
+++ b/assets/styles.css
@@ -187,3 +187,35 @@ article p {
     float: right;
 }
 
+.aside-column {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+aside {
+    display: grid;
+    grid-template-columns: 75px 150px;
+    grid-template-rows: repeat(4, auto-fit);
+    margin-left: 6em;
+}
+
+aside > img {
+    height: 75px;
+    width: 75px;
+}
+
+aside > span {
+    display: inline-flex;
+    font-size: 0.8em;
+    margin-left: 2em;
+    margin-bottom: 2em
+}
+
+aside > span > a {
+    text-decoration: none;
+    font-size: 0.8em;
+}
+aside > div {
+    grid-column: 1/3;
+}
