--- a/assets/styles.css
+++ b/assets/styles.css
@@ -198,24 +198,46 @@ aside {
     grid-template-columns: 75px 150px;
     grid-template-rows: repeat(4, auto-fit);
     margin-left: 6em;
+    font-size: 14px;
+    font-weight: 700;
 }
 
 aside > img {
     height: 75px;
     width: 75px;
+    margin-bottom: 1em;
 }
 
 aside > span {
     display: inline-flex;
-    font-size: 0.8em;
-    margin-left: 2em;
-    margin-bottom: 2em
 }
 
 aside > span > a {
     text-decoration: none;
-    font-size: 0.8em;
+    font-size: 14px;
+    line-height: 17px;
+    color: #515151;
+    padding-top: 1em;
+    padding-left: 00.5em;
+    font-weight: 500;
 }
+
 aside > div {
     grid-column: 1/3;
+}
+
+hr {
+    margin: 1em 0;
+}
+
+.inflation {
+    margin: 0 auto;
+    background: url("./imgs/inflation.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 945px;
+    height: 576px;
+    display: grid;
+    grid-template-columns:  repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto-fit);
 }
