--- a/assets/styles.css
+++ b/assets/styles.css
@@ -230,7 +230,22 @@ hr {
     margin: 1em 0;
 }
 
-.inflation {
+
+
+.inflation > h3 {
+    width: 945px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.inflation > p {
+    width: 945px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.inflation-grid {
     margin: 0 auto;
     background: url("./imgs/inflation.png");
     background-repeat: no-repeat;
@@ -240,4 +255,44 @@ hr {
     display: grid;
     grid-template-columns:  repeat(4, 1fr);
     grid-template-rows: repeat(4, auto-fit);
+    grid-gap: 20px;
+}
+
+.text {
+    font-size: small;
+    margin-top: 4em;
+
+}
+
+.text1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.text2 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+.text3 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.text4 {
+    grid-column: 4/5;
+    grid-row: 2/3;
+}
+.text5 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+.text6 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+.text7 {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+.text8 {
+    grid-column: 4/5;
+    grid-row: 4/5;
 }
