--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+    font-family: 'Times New Roman', Times, serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -307,7 +308,6 @@ hr {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .comments-social > div {
@@ -327,9 +327,115 @@ hr {
     letter-spacing: 0.05em;
     line-height: 1.5rem;
     cursor: pointer;
-
 }
 
 .comments-social > div > i {
     margin-left: 0.5em;
+}
+
+.bottom-articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 2fr 2fr 1fr;
+}
+
+/* SUGGESTED ARTICLES */
+.suggestions {
+    grid-column: 2/5;
+    grid-row: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 40px 295px 40px;
+}
+
+.suggestions span {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    text-align: right;
+    font-size: 0.875rem;
+    color: rgb(102, 102, 102);
+}
+
+.suggestions img {
+    height: 80px;
+    width: 80px;
+    margin: 1em;
+}
+
+.suggestion-schedule {
+    font-size: 0.6875rem;
+    font-weight: 500;
+    letter-spacing: 0.09em;
+    color: rgb(51, 51, 51);
+    margin: 1em 1.5em;
+}
+
+.suggestion-title {
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 1.25rem;
+    color: rgb(18, 18, 18);
+    margin: 0 1em 0.5em 1em;
+}
+
+.suggestion-text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: normal;
+    margin: 0 1em 1em 1em;
+}
+
+.suggestion-latest {
+    font-size: 0.875rem;
+    line-height: 1.125rem;
+    letter-spacing: 0.2px;
+    font-weight: 700;
+    color: rgb(50, 104, 145);
+    margin: 1em;
+    bottom: 0;
+}
+
+.suggestion1 {
+    border: 1px solid black;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    width: 273px;
+    height: 295px;
+}
+
+.suggestion2 {
+    border: 1px solid black;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    width: 273px;
+    height: 295px;
+}
+
+.suggestion3 {
+    border: 1px solid black;
+    grid-column: 3/4;
+    grid-row: 2/3;
+    width: 273px;
+    height: 295px;
+}
+
+.suggestions button {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+.space {
+    grid-column: 2/5;
+    grid-row: 3/5;
+}
+
+.picks {
+    grid-column: 2/5;
+    grid-row: 5/6;
+}
+
+.popular {
+    grid-column: 5/6;
+    grid-row: repeat(auto, auto-fit);
 }
