--- a/assets/styles.css
+++ b/assets/styles.css
@@ -336,16 +336,16 @@ hr {
 .bottom-articles {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 2fr 2fr 1fr;
+    grid-template-rows: 500px 500px 250px;
 }
 
 /* SUGGESTED ARTICLES */
 .suggestions {
     grid-column: 2/5;
-    grid-row: 1/3;
+    grid-row: 1/2;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 40px 295px 40px;
+    grid-template-rows: 40px 295px 70px;
 }
 
 .suggestions span {
@@ -412,6 +412,14 @@ hr {
     height: 295px;
 }
 
+.suggestions >div >i {
+    float: right;
+    margin-top: 2em;
+    margin-right: 3em;
+    height: 30px;
+    width: 30px;
+}
+
 .suggestion3 {
     border: 1px solid black;
     grid-column: 3/4;
@@ -438,4 +446,94 @@ hr {
 .popular {
     grid-column: 5/6;
     grid-row: repeat(auto, auto-fit);
+}
+
+.suggestions > button {
+    width: 270px;
+    cursor: pointer;
+    border-radius: 3px;
+    color: white;
+    font-size: 15px;
+    line-height: 15px;
+    letter-spacing: 0.02em;
+    padding: 10px 20px;
+    background-color: rgb(18, 18, 18);
+    font-weight: 700;
+    vertical-align: middle;
+    border: 1px solid rgb(18, 18, 18);
+    margin-top: 2em;
+
+
+}
+
+.space {
+    grid-column: 2/5;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 40px 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 30px;
+    border-top: 1px solid grey;
+}
+
+.space > p {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin-top: 1em;
+}
+
+.space1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.space2 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.space3 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+.space4 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.space5 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+.space6 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+.space > p {
+    color: black;
+    cursor: pointer;
+    font-weight: 800;
+}
+
+.space > p:hover {
+    text-decoration: underline;
+}
+
+.space > div > p {
+    color: rgb(18, 18, 18);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 22px;
+    cursor: pointer;
+    margin-top: 1em;
+    margin-bottom: 1em;
+
+}
+.space-dates {
+    font-size: 12px;
+    color: rgb(153,153,153);
 }
