--- a/assets/styles.css
+++ b/assets/styles.css
@@ -238,6 +238,7 @@ main figcaption {
 
 .main-article {
   display: grid;
+  display: -ms-grid;
   grid-template-columns: 1fr 1fr 1fr;
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.25rem;
@@ -249,14 +250,25 @@ main figcaption {
   margin-top: 4em;
 }
 
-article {
-  margin-top: 2em;
-}
-
 article p {
   margin-bottom: 15px;
   line-height: 1.875rem;
   font-size: 1.25rem;
+  margin-top: 2em;
+}
+
+section > p {
+  margin-bottom: 15px;
+  line-height: 1.875rem;
+  font-size: 1.25rem;
+  margin-top: 2em;
+}
+
+div > p {
+  margin-bottom: 15px;
+  line-height: 1.875rem;
+  font-size: 1.25rem;
+  margin-top: 2em;
 }
 
 .writer {
@@ -815,6 +827,7 @@ footer li:hover {
 .small-links-separator {
   border-bottom: 1px solid lightgray;
   padding: 0 0 1em 0;
+  margin-bottom: 1em;
 }
 
 footer {
